--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="asset/image/slide/sl1.png" class="d-block w-100" alt="...">
+                        <img src="asset/image/slide/sl1.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="asset/image/slide/sl2.png" class="d-block w-100" alt="...">
+                        <img src="asset/image/slide/sl2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="asset/image/slide/sl3.png" class="d-block w-100" alt="...">
+                        <img src="asset/image/slide/sl3.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
@@ -140,7 +140,7 @@
                             <div class="container mt-3">
                                 <div class="d-flex justify-content-center mb-3">
                                     <div class="p-2 bg-light">
-                                        <img src="/new/asset/image/payudi.jpg" alt=""><br><br>
+                                        <img src="asset/image/payudi.jpg" alt=""><br><br>
                                         <p>Bismillahirrohmanirrahim Assalamu‘alaikum Wr. Wb. Segala puji hanya untuk Allah dan shalawat serta salam semoga tercurah atas...</p>
                                     </div>
                                 </div>
