--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <img src="/new/asset/image/icon/guru.png" class="rounded" alt="..."
+                            <img src="asset/image/icon/guru.png" class="rounded" alt="..."
                             style="width: 100px; height: 100px;">
                             <h4 class="heading">Guru Profesional</h4>
                             <p>Guru yang mampu mendidik anak muridnya menjadi generasi yang mampu bersaing dan memiliki moral
@@ -70,7 +70,7 @@
                     </div>
                     <div class="col-sm" style="background-color: #8cc152;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <img src="/new/asset/image/icon/belajar.png" class="rounded" alt="..."
+                            <img src="asset/image/icon/belajar.png" class="rounded" alt="..."
                             style="width: 100px; height: 100px;">
                             <h4 class="heading">Pembelajaran Khusus</h4>
                             <p>Penerapan secara khusus suatu metode pembelajaran yang telah disesuaikan dengan kemampuan dan
@@ -79,7 +79,7 @@
                     </div>
                     <div class="col-sm" style="background-color: #5d50c6;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <img src="/new/asset/image/icon/Buku.png" class="rounded" alt="..."
+                            <img src="asset/image/icon/Buku.png" class="rounded" alt="..."
                             style="width: 100px; height: 100px;">
                             <h4 class="heading">Buku & Perpustakaan</h4>
                             <p>Buku merupakan bentuk cetakan yang tidak bisa dijauhkan dari aktivitas belajar mengajar.</p>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col-sm" style="background-color: #f1453d;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <img src="/new/asset/image/icon/Akreditasi.png" class="rounded" alt="..."
+                            <img src="asset/image/icon/Akreditasi.png" class="rounded" alt="..."
                             style="width: 100px; height: 100px;">
                             <h4 class="heading">Akreditasi</h4>
                             <p>Terakreditasi A oleh BAN-SM. Suatu bentuk pengakuan pemerintah terhadap lembaga pendidikan negeri
