--- a/profile.html
+++ b/profile.html
@@ -1,136 +1,128 @@
 <!doctype html>
 <html lang="en">
-
-<head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
-    <title>SMAN 1 PP</title>
-
-</head>
-
-<body>
-    <!-- ini bagian navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="index.html">SMAN 1 PP</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i>
-                        Home</a>
-                    <a class="nav-link active" href="profile.html"><i class="fas fa-user"></i> Profile</a>
-                    <a class="nav-link active" href="kontak.html"><i class="fas fa-phone"></i> Kontak</a>
-                </div>
-            </div>
-        </div>
-    </nav>
-
-    <!-- container menggunakan grid -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm bg-white">
-                <div class="media-body p-4 mt-2 text-center">
-                    <h4 class="heading">VISI dan MISI SEKOLAH</h4>
-                    <img src="asset/image/icon/LOGO-SMA.png" alt="" style="width: 150px;"><br><br>
-                    <div class="container mt-3">
-                        <div class="d-flex justify-content-center mb-3">
-                            <div class="p-2">
-                                <h4 class="heading text-info">Visi  SMAN 1 Punduh Pedada</h4>
-                                <p>“ MENJADIKAN LULUSAN SMAN 1  PUNDUH PEDADA  YANG BERIMAN DAN BERTAKWA TERHADAP TUHAN YANG MAHA ESA, BERPENGETAHUAN LUAS, TERAMPIL, BERBUDI PEKERTI LUHUR, DAN BERKUALITAS ”</p>
-                            </div>
-                        </div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <div class="p-2">
-                                <h4 class="heading text-info">Misi SMAN 1 Punduh Pedadaa</h4>
-                                <ol class="text-start">
-                                    <li>Melaksanakan pembelajaran dan bimbingan secara efektif dan berkualitas.</li>
-                                    <li>Menumbuhkan semangat berprestasi di bidang akademik dan non  akademik yang berkarakter kebangsaan.</li>
-                                    <li>Menjadikan sekolah sebagai tempat pengembangan ilmu dan kemandirian.</li>
-                                    <li>Mendorong dan membantu siswa mengembangkan potensi diri secara  optimal.</li>
-                                    <li>Meningkatkan persentase lulusan yang diterima di Perguruan Tinggi Negeri.</li>
-                                </ol>
-                            </div>
-                        </div>
-                       
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm bg-light">
-                <div class="media-body p-4 mt-2 text-center">
-                    <h4 class="heading">SMAN 1 Punduh Pedadal</h4>
-                    <!-- container menggunakan grid -->
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-sm" style="background-color: #1eaaf1;">
-                                <div class="media-body p-4 mt-2 text-center text-light">
-                                    <img src="/new/asset/image/icon/guru.png" class="rounded" alt="..."
-                                        style="width: 100px; height: 100px;">
-                                    <h4 class="heading">Guru Profesional</h4>
-                                    <p>Guru yang mampu mendidik anak muridnya menjadi generasi yang mampu bersaing dan
-                                        memiliki moral
-                                        yang baik.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm" style="background-color: #8cc152;">
-                                <div class="media-body p-4 mt-2 text-center text-light">
-                                    <img src="/new/asset/image/icon/belajar.png" class="rounded" alt="..."
-                                        style="width: 100px; height: 100px;">
-                                    <h4 class="heading">Pembelajaran Khusus</h4>
-                                    <p>Penerapan secara khusus suatu metode pembelajaran yang telah disesuaikan dengan
-                                        kemampuan dan
-                                        kebiasaan siswa.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm" style="background-color: #5d50c6;">
-                                <div class="media-body p-4 mt-2 text-center text-light">
-                                    <img src="/new/asset/image/icon/Buku.png" class="rounded" alt="..."
-                                        style="width: 100px; height: 100px;">
-                                    <h4 class="heading">Buku & Perpustakaan</h4>
-                                    <p>Buku merupakan bentuk cetakan yang tidak bisa dijauhkan dari aktivitas belajar
-                                        mengajar.</p>
-                                </div>
-                            </div>
-                            <div class="col-sm" style="background-color: #f1453d;">
-                                <div class="media-body p-4 mt-2 text-center text-light">
-                                    <img src="/new/asset/image/icon/Akreditasi.png" class="rounded" alt="..."
-                                        style="width: 100px; height: 100px;">
-                                    <h4 class="heading">Akreditasi</h4>
-                                    <p>Terakreditasi A oleh BAN-SM. Suatu bentuk pengakuan pemerintah terhadap lembaga
-                                        pendidikan negeri
-                                        dan swasta.</p>
-                                </div>
-                            </div>
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+            integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
+            <title>SMAN 1 PP</title>
+        </head>
+        <body>
+            <!-- ini bagian navbar -->
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="index.html">SMAN 1 PP</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                        <div class="navbar-nav">
+                            <a class="nav-link active" aria-current="page" href="index.html"><i class="fas fa-home"></i>
+                            Home</a>
+                            <a class="nav-link active" href="profile.html"><i class="fas fa-user"></i> Profile</a>
+                            <a class="nav-link active" href="kontak.html"><i class="fas fa-phone"></i> Kontak</a>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- grid footer -->
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm" style="background-color: #1eaaf1;">
-                <div class="media-body p-4 mt-2 text-center text-light">
-                    <p>SMA Negeri 1 Punduh Pedadal</p>
+            </nav>
+            <!-- container menggunakan grid -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm bg-white">
+                        <div class="media-body p-4 mt-2 text-center">
+                            <h4 class="heading">VISI dan MISI SEKOLAH</h4>
+                            <img src="asset/image/icon/LOGO-SMA.png" alt="" style="width: 150px;"><br><br>
+                            <div class="container mt-3">
+                                <div class="d-flex justify-content-center mb-3">
+                                    <div class="p-2">
+                                        <h4 class="heading text-info">Visi  SMAN 1 Punduh Pedada</h4>
+                                        <p>“ MENJADIKAN LULUSAN SMAN 1  PUNDUH PEDADA  YANG BERIMAN DAN BERTAKWA TERHADAP TUHAN YANG MAHA ESA, BERPENGETAHUAN LUAS, TERAMPIL, BERBUDI PEKERTI LUHUR, DAN BERKUALITAS ”</p>
+                                    </div>
+                                </div>
+                                <div class="d-flex justify-content-center mb-3">
+                                    <div class="p-2">
+                                        <h4 class="heading text-info">Misi SMAN 1 Punduh Pedadaa</h4>
+                                        <ol class="text-start">
+                                            <li>Melaksanakan pembelajaran dan bimbingan secara efektif dan berkualitas.</li>
+                                            <li>Menumbuhkan semangat berprestasi di bidang akademik dan non  akademik yang berkarakter kebangsaan.</li>
+                                            <li>Menjadikan sekolah sebagai tempat pengembangan ilmu dan kemandirian.</li>
+                                            <li>Mendorong dan membantu siswa mengembangkan potensi diri secara  optimal.</li>
+                                            <li>Meningkatkan persentase lulusan yang diterima di Perguruan Tinggi Negeri.</li>
+                                        </ol>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm bg-light">
+                        <div class="media-body p-4 mt-2 text-center">
+                            <h4 class="heading">SMAN 1 Punduh Pedadal</h4>
+                            <!-- container menggunakan grid -->
+                            <div class="container-fluid">
+                                <div class="row">
+                                    <div class="col-sm" style="background-color: #1eaaf1;">
+                                        <div class="media-body p-4 mt-2 text-center text-light">
+                                            <img src="asset/image/icon/guru.png" class="rounded" alt="..."
+                                            style="width: 100px; height: 100px;">
+                                            <h4 class="heading">Guru Profesional</h4>
+                                            <p>Guru yang mampu mendidik anak muridnya menjadi generasi yang mampu bersaing dan
+                                                memiliki moral
+                                            yang baik.</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm" style="background-color: #8cc152;">
+                                        <div class="media-body p-4 mt-2 text-center text-light">
+                                            <img src="asset/image/icon/belajar.png" class="rounded" alt="..."
+                                            style="width: 100px; height: 100px;">
+                                            <h4 class="heading">Pembelajaran Khusus</h4>
+                                            <p>Penerapan secara khusus suatu metode pembelajaran yang telah disesuaikan dengan
+                                                kemampuan dan
+                                            kebiasaan siswa.</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm" style="background-color: #5d50c6;">
+                                        <div class="media-body p-4 mt-2 text-center text-light">
+                                            <img src="asset/image/icon/Buku.png" class="rounded" alt="..."
+                                            style="width: 100px; height: 100px;">
+                                            <h4 class="heading">Buku & Perpustakaan</h4>
+                                            <p>Buku merupakan bentuk cetakan yang tidak bisa dijauhkan dari aktivitas belajar
+                                            mengajar.</p>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm" style="background-color: #f1453d;">
+                                        <div class="media-body p-4 mt-2 text-center text-light">
+                                            <img src="asset/image/icon/Akreditasi.png" class="rounded" alt="..."
+                                            style="width: 100px; height: 100px;">
+                                            <h4 class="heading">Akreditasi</h4>
+                                            <p>Terakreditasi A oleh BAN-SM. Suatu bentuk pengakuan pemerintah terhadap lembaga
+                                                pendidikan negeri
+                                            dan swasta.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
-    </script>
-</body>
-
-</html>
+            <!-- grid footer -->
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-sm" style="background-color: #1eaaf1;">
+                        <div class="media-body p-4 mt-2 text-center text-light">
+                            <p>SMA Negeri 1 Punduh Pedadal</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Option 1: Bootstrap Bundle with Popper -->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
+            </script>
+        </body>
+    </html>
