--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
-            <title>SMAN 1 PP</title>
+            <title>SMKN 1 Awonapa Jr</title>
         </head>
         <body>
             <!-- ini bagian navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">SMAN 1 PP</a>
+                    <a class="navbar-brand" href="index.html">SMKN 1 Awonapa Jr</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -101,7 +101,7 @@
                 <div class="row">
                     <div class="col-sm bg-white">
                         <div class="media-body p-4 mt-2 text-center">
-                            <h4 class="heading">Apa keunggulan SMAN 1 punduh pedada</h4>
+                            <h4 class="heading">Apa keunggulan SMKN 1 Awonapa Jr</h4>
                             <p>Kualitas pendidikan bergantung kepada kualitas tenaga pendidik dan infrastuktur yang memadai.
                             Berikut adalah beberapa daftar keunggulan kami.</p>
                             <div class="container mt-3">
@@ -136,11 +136,11 @@
                     </div>
                     <div class="col-sm bg-light">
                         <div class="media-body p-4 mt-2 text-center">
-                            <h4 class="heading">Selamat Datang Di SMAN 1 punduh pedadal</h4>
+                            <h4 class="heading">Selamat Datang Di SMKN 1 Awonapa Jr</h4>
                             <div class="container mt-3">
                                 <div class="d-flex justify-content-center mb-3">
                                     <div class="p-2 bg-light">
-                                        <img src="asset/image/payudi.jpg" alt=""><br><br>
+                                        <img src="asset/image/wahyu.jpg" alt="" class="img-thumbnail" style="width: 200px; height: 200px;"><br><br>
                                         <p>Bismillahirrohmanirrahim Assalamu‘alaikum Wr. Wb. Segala puji hanya untuk Allah dan shalawat serta salam semoga tercurah atas...</p>
                                     </div>
                                 </div>
@@ -154,7 +154,7 @@
                 <div class="row">
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <p>SMA Negeri 1 Punduh Pedadal</p>
+                            <p>SMA Negeri 1 Awonapa Jr</p>
                         </div>
                     </div>
                 </div>
