--- a/kontak.html
+++ b/kontak.html
@@ -8,13 +8,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
-            <title>SMAN 1 PP</title>
+            <title>SMKN 1 Awonapa Jr</title>
         </head>
         <body>
             <!-- ini bagian navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">SMAN 1 PP</a>
+                    <a class="navbar-brand" href="index.html">SMKN 1 Awonapa Jr</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -46,13 +46,13 @@
                     <div class="col-sm" style="background-color: #5d50c6;">
                         <div class="media-body p-4 mt-2 text-center text-light">
                             <h4 class="heading">Email Sekolah</h4>
-                            <p>sman1pp@gmail.com.</p>
+                            <p>awonapajr@gmail.com.</p>
                         </div>
                     </div>
                     <div class="col-sm" style="background-color: #f1453d;">
                         <div class="media-body p-4 mt-2 text-center text-light">
                             <h4 class="heading">Website</h4>
-                            <p>https://sman1pp.sch.id</p>
+                            <p>https://awonapa.com</p>
                         </div>
                     </div>
                 </div>
@@ -62,7 +62,7 @@
                 <div class="row">
                     <div class="col-sm bg-white">
                         <div class="media-body p-4 mt-2 text-center">
-                            <h4 class="heading">SMAN 1 Punduh Pedadal</h4>
+                            <h4 class="heading">SMKN 1 Awonapa Jr</h4>
                             <img src="asset/image/icon/LOGO-SMA.png" alt="" style="width: 150px;"><br><br>
                             <div class="container mt-3">
                                 <div class="d-flex justify-content-center mb-3">
@@ -75,7 +75,7 @@
                     </div>
                     <div class="col-sm bg-light">
                         <div class="media-body p-4 mt-2 text-center">
-                            <h4 class="heading">SMAN 1 Punduh Pedadal</h4>
+                            <h4 class="heading">SMKN 1 Awonapa Jr</h4>
                             <!-- container menggunakan grid -->
                             <div class="container-fluid">
                                 <div class="row">
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <p>SMA Negeri 1 Punduh Pedadal</p>
+                            <p>SMA Negeri 1 Awonapa Jr</p>
                         </div>
                     </div>
                 </div>
