update header, image, section

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
             <!-- ini bagian navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">SMAN 1 PP</a>
+                    <a class="navbar-brand" href="index.html">SMKN 1 AWONAPA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -35,17 +35,17 @@
                     <div class="col-sm bg-white">
                         <div class="media-body p-4 mt-2 text-center">
                             <h4 class="heading">VISI dan MISI SEKOLAH</h4>
-                            <img src="asset/image/icon/LOGO-SMA.png" alt="" style="width: 150px;"><br><br>
+                            <img src="asset/image/icon/LOGO-SMA.png" alt=""><br><br>
                             <div class="container mt-3">
                                 <div class="d-flex justify-content-center mb-3">
                                     <div class="p-2">
-                                        <h4 class="heading text-info">Visi  SMAN 1 Punduh Pedada</h4>
-                                        <p>“ MENJADIKAN LULUSAN SMAN 1  PUNDUH PEDADA  YANG BERIMAN DAN BERTAKWA TERHADAP TUHAN YANG MAHA ESA, BERPENGETAHUAN LUAS, TERAMPIL, BERBUDI PEKERTI LUHUR, DAN BERKUALITAS ”</p>
+                                        <h4 class="heading text-info">Visi  SMKN 1 Awonapa Jr</h4>
+                                        <p>“ MENJADIKAN LULUSAN SMKN 1 AWONAPA YANG BERIMAN DAN BERTAKWA TERHADAP TUHAN YANG MAHA ESA, BERPENGETAHUAN LUAS, TERAMPIL, BERBUDI PEKERTI LUHUR, DAN BERKUALITAS ”</p>
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-center mb-3">
                                     <div class="p-2">
-                                        <h4 class="heading text-info">Misi SMAN 1 Punduh Pedadaa</h4>
+                                        <h4 class="heading text-info">Misi SMKN 1 Awonapa Jr</h4>
                                         <ol class="text-start">
                                             <li>Melaksanakan pembelajaran dan bimbingan secara efektif dan berkualitas.</li>
                                             <li>Menumbuhkan semangat berprestasi di bidang akademik dan non  akademik yang berkarakter kebangsaan.</li>
@@ -61,7 +61,7 @@
                     </div>
                     <div class="col-sm bg-light">
                         <div class="media-body p-4 mt-2 text-center">
-                            <h4 class="heading">SMAN 1 Punduh Pedadal</h4>
+                            <h4 class="heading">SMAN 1 SMKN 1 Awonapa Jr</h4>
                             <!-- container menggunakan grid -->
                             <div class="container-fluid">
                                 <div class="row">
@@ -115,7 +115,7 @@
                 <div class="row">
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <p>SMA Negeri 1 Punduh Pedadal</p>
+                            <p>SMK Negeri 1 Awonapa Jr</p>
                         </div>
                     </div>
                 </div>
