--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
-            <title>SMKN 1 Awonapa Jr</title>
+            <title>SMKN 1 AWONAPA JR</title>
         </head>
         <body>
             <!-- ini bagian navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">SMKN 1 Awonapa Jr</a>
+                    <a class="navbar-brand" href="index.html">SMKN 1 AWONAPA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -154,7 +154,7 @@
                 <div class="row">
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <p>SMA Negeri 1 Awonapa Jr</p>
+                            <p>SMK Negeri 1 Awonapa Jr</p>
                         </div>
                     </div>
                 </div>
