--- a/kontak.html
+++ b/kontak.html
@@ -8,13 +8,13 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.css">
-            <title>SMKN 1 Awonapa Jr</title>
+            <title>SMKN 1 AWONAPA JR</title>
         </head>
         <body>
             <!-- ini bagian navbar -->
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1eaaf1;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="index.html">SMKN 1 Awonapa Jr</a>
+                    <a class="navbar-brand" href="index.html">SMKN 1 AWONAPA</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -34,7 +34,7 @@
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
                             <h4 class="heading">Alamat</h4>
-                            <p>Jl Rakito Arifin Maja, Kec. Marga Punduh, Kab. Pesawaran, Lampung</p>
+                            <p>Gg. Dahlia No.3, Way Huwi, Kec. Jati Agung, Kabupaten Lampung Selatan, Lampung 35132</p>
                         </div>
                     </div>
                     <div class="col-sm" style="background-color: #8cc152;">
@@ -63,11 +63,11 @@
                     <div class="col-sm bg-white">
                         <div class="media-body p-4 mt-2 text-center">
                             <h4 class="heading">SMKN 1 Awonapa Jr</h4>
-                            <img src="asset/image/icon/LOGO-SMA.png" alt="" style="width: 150px;"><br><br>
+                            <img src="asset/image/icon/LOGO-SMA.png" alt=""><br><br>
                             <div class="container mt-3">
                                 <div class="d-flex justify-content-center mb-3">
                                     <div class="p-2">
-                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.215297642795!2d105.14928481413246!3d-5.681991357812164!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e412e3da423c871%3A0x20b8f4aa9304d17d!2sSMAN%201%20Punduh%20Pedada!5e0!3m2!1sen!2sid!4v1609859382636!5m2!1sen!2sid" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.33846539186!2d105.29188391426781!3d-5.365233996108288!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e40c57178440d5d%3A0x1ed39b7c8dd27672!2sAwonapa!5e0!3m2!1sen!2sid!4v1610012759169!5m2!1sen!2sid" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                                     </div>
                                 </div>
                             </div>
@@ -129,7 +129,7 @@
                 <div class="row">
                     <div class="col-sm" style="background-color: #1eaaf1;">
                         <div class="media-body p-4 mt-2 text-center text-light">
-                            <p>SMA Negeri 1 Awonapa Jr</p>
+                            <p>SMK Negeri 1 Awonapa Jr</p>
                         </div>
                     </div>
                 </div>
