--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="asset/image/slide/sl1.jpg" class="d-block w-100" alt="...">
+                        <img src="asset/image/slide/sl1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="asset/image/slide/sl2.jpg" class="d-block w-100" alt="...">
+                        <img src="asset/image/slide/sl2.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="asset/image/slide/sl3.jpg" class="d-block w-100" alt="...">
+                        <img src="asset/image/slide/sl3.png" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
